# delivery-rating-provider

./: .gitignore  Dockerfile  jsonnetfile.lock.json  pyproject.toml
.github/workflows/: workflow.yml
environments/default/: main.jsonnet  spec.json
src/provider/: __main__.py  bot.py  brand.py  common.py  config.py  context_args.py  filter.py  helper.py  menu.py  models.py  payment.py  restaurant_list_item.py
src/provider/models/: __init__.py  brand.py  common.py  menu.py  payment.py  restaurant_list_item.py
src/provider/takeaway/: __init__.py
src/provider/takeaway/models/: __init__.py  brand.py  colophone.py  common.py  menu.py  payment.py  restaurant_list_item.py
src/tests/: test_api.py
